--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
     <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
         <img id="luminate" src="img/luminate.png">
     </a>
+    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+        <img id="luminate" src="img/odi.png">
+    </a>
+    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+        <img id="luminate" src="img/Cuebiq.png">
+    </a>
 </header>
 
 <body>
