--- a/projects/index.html
+++ b/projects/index.html
@@ -39,14 +39,20 @@
 <a style="text-decoration: none;" href="https://list.data4covid19.org" class="top-bar_button"><span class="material-icons">
     reply
     </span></a>
-<header class="gl-header">
-    <a class="govlab-logo" target="_blank" href="http://thegovlab.org">
-        <img src="../img/govlab-logo-white.png" alt="The GovLab">
-    </a>
-    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
-        <img id="luminate" src="../img/luminate.png">
-    </a>
-</header>
+    <header class="gl-header">
+        <a class="govlab-logo" target="_blank" href="http://thegovlab.org">
+            <img src="img/govlab-logo-white.png" alt="The GovLab">
+        </a>
+        <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+            <img id="luminate" src="img/luminate.png">
+        </a>
+        <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+            <img id="luminate" src="img/odi.png">
+        </a>
+        <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+            <img id="luminate" src="img/Cuebiq.png">
+        </a>
+    </header>
 
 <body>
     <div id="project-page">
