--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <a class="govlab-logo" target="_blank" href="http://thegovlab.org">
         <img src="img/govlab-logo-white.png" alt="The GovLab">
     </a>
-    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+    <!-- <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
         <img id="luminate" src="img/luminate.png">
-    </a>
+    </a> -->
     <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
         <img id="luminate" src="img/odi.png">
     </a>
@@ -322,7 +322,7 @@
         <div class="logo-side">
             <div class="logos">
                 <img src="img/govlab-logo-white.png">
-                <img id="luminate" src="img/luminate.png">
+                <!-- <img id="luminate" src="img/luminate.png"> -->
             </div>
             <p>The Governance Lab's mission is to improve people's lives by changing the way we govern. Our goal at
                 The GovLab is to strengthen the ability of institutions — including but not limited to governments —
