--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="hero testing hero-banner">
         <div class="text">
-            <h1>#Data4COVID19</h1>
+            <h1>#Data4COVID19 Mobility Repository</h1>
             <span>
                 <p>A living repository of mobility &nbsp<a href="https://datacollaboratives.org/" target="_blank">data
                         collaboratives</a>&nbsp seeking to address the spread of &nbsp <a
