--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="#Data4COVID19 is a series of projects undertaken by The GovLab—with partners such as the OECD, Open Data
-        Charter, Luce Foundation, Microsoft, Rockefeller Foundation, SDSN TRENDS, World Economic Forum,
-        University of Washington, and others—to identify, collect, and analyze the value data can provide to the
-        ongoing COVID-19 pandemic" />
+    <meta name="description" content="The #Data4COVID19 mobility repository is an effort from The GovLab, Cuebiq, and Open Data Institute to document and collect applications of mobility data in response to the COVID-19 pandemic." />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Data4COVID19" />
-    <meta property="og:description" content="#Data4COVID19 is a series of projects undertaken by The GovLab—with partners such as the OECD, Open Data
-        Charter, Luce Foundation, Microsoft, Rockefeller Foundation, SDSN TRENDS, World Economic Forum,
-        University of Washington, and others—to identify, collect, and analyze the value data can provide to the
-        ongoing COVID-19 pandemic" />
-    <meta property="og:image" content="img/covid-logo-color.png" />
+    <meta property="og:title" content="Data4COVID19: Mobility" />
+    <meta property="twitter:title" content="Data4COVID19: Mobility" />
+    <meta property="og:description" content="The #Data4COVID19 mobility repository is an effort from The GovLab, Cuebiq, and Open Data Institute to document and collect applications of mobility data in response to the COVID-19 pandemic." />
+    <meta property="og:image" content="https://mobility.data4covid19.org/img/meta.png" />
+    <meta property="twitter:image" content="https://mobility.data4covid19.org/img/meta.png" />
     <title>Data4COVID19</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -345,16 +341,7 @@
             </p>
         </div>
     </footer>
-    <footer>
-        <div class="logo-side">
-            <div class="logos">
-                <img src="img/ukaid.png">
-                <img style="margin-left:20px" src="img/COVIDaction_logo-white.png">
 
-            </div>
-
-        </div>
-    </footer>
 
 </body>
 
