--- a/projects/index.html
+++ b/projects/index.html
@@ -251,7 +251,49 @@
         <h3>DESCRIPTION</h3>
         <p> {{filterData[0].long_description}}</p>
     </div>
-    
+    <div  class="divider">
+        <h1>Authors</h1>
+    </div>
+    <div class="stay-connected partners">
+        <h1>The Governance Lab</h1>
+        <p>The Governance Lab at New York University’s Tandon School of Engineering, The GovLab, is an action research
+            center whose mission is to strengthen the ability of institutions — including but not limited to governments
+            — and people to work more openly, collaboratively, effectively and legitimately to make better decisions and
+            solve public problems. The GovLab’s existing Data Collaborative framework identifies the factors that make
+            data-sharing partnerships effective in generating public value, as well as providing a blueprint for
+            designing successful Data Collaboratives while also embedding principles of responsible data use. As an
+            extension of this work, The GovLab’s #Data4COVID-19 project provides a living repository of 175
+            multi-stakeholder data collaboratives focusing on data sharing throughout the pandemic, including 31
+            projects focused primarily on mobility data sharing - enabling a jumpstart of the above project with early
+            deliverables from mid November onwards. </p>
+    </div>
+    <div class="stay-connected partners">
+        <h1>Cuebiq Data for Good</h1>
+        <p>“Data for Good” is the corporate social responsibility program of Cuebiq, a mobility data platform. Since
+            2016, Cuebiq has provided mobility data and insights for over 100 academic research projects and
+            humanitarian initiatives related to human mobility. Throughout the COVID-19 pandemic alone, Cuebiq
+            established a COVID-19 Data Collaborative to provide privacy preserving mobility data to dozens of
+            organizations, including the CDC, the City of New York, UNICEF, the World Bank, Johns Hopkins University,
+            and Oxford, among many others. Beyond the establishment of a formal COVID-19 Data Collaborative, Cuebiq has
+            built a model for responsible mobility data sharing grounded in ethical data provenance and privacy by
+            design.</p>
+    </div>
+    <div class="stay-connected partners">
+        <h1>Open Data Institute</h1>
+        <p>The ODI was co-founded in 2012 by the inventor of the web Sir Tim Berners-Lee and artificial intelligence
+            expert Sir Nigel Shadbolt to show the value of open data, and to advocate for the innovative use of open
+            data to affect positive change across the globe.<br>
+
+            We’re an independent, non-profit, non-partisan company that, since our creation, has welcomed high-profile
+            board members including Mumsnet founder Justine Roberts, Lastminute.com founder Baroness Martha Lane Fox and
+            former European Commissioner Neelie Kroes.<br>
+
+            Headquartered in London, with an international reach, hundreds of members, thousands of people trained,
+            dozens of startups incubated, and a convening space in the heart of the capital, we invite everyone
+            interested in developing with data – whether on an individual, organisational or global level – to get in
+            touch.
+        </p>
+    </div>
     <footer>
         <div class="logo-side">
             <div class="logos">
@@ -279,21 +321,7 @@
             </p>
         </div>
     </footer>
-    <footer>
 
-        <div class="attribute">
-            <p>The #Data4COVID19 Repository is made possible in part by a #COVIDaction Data Challenge award from the UKAID Department for International Development (DFID)’s Frontier Technologies Hub.
-            </p>
-        </div>
-        <div class="logo-side">
-            <div class="logos">
-                <img src="../img/ukaid.png">
-                <img style="margin-left:20px" src="../img/COVIDaction_logo-white.png">
-                
-            </div>
-
-        </div>
-    </footer>
 </div>
 </body>
 
