--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <!-- <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
         <img id="luminate" src="img/luminate.png">
     </a> -->
-    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+    <a class="luminate-logo" target="_blank" href="https://en.wikipedia.org/wiki/Open_Data_Institute">
         <img id="luminate" src="img/odi.png">
     </a>
-    <a class="luminate-logo" target="_blank" href="http://luminategroup.com">
+    <a class="luminate-logo" target="_blank" href="https://www.cuebiq.com/">
         <img id="luminate" src="img/Cuebiq.png">
     </a>
 </header>
