long-form-casetudy-link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="description-text">
             <p>As such, we assembled a repository of mobility data collaboratives related to COVID-19, five of which are
-                described in greater detail through long-form case studies. We provide recommendations towards enabling
+                described in greater detail through <a style="color:#ffffff;font-weight:600" href="https://theodi.org/article/mobility-data-sharing-during-the-covid-19-pandemic-research-from-cuebiq-and-govlab/" target="_blank">long-form case studies</a>. We provide recommendations towards enabling
                 more systematic, sustainable and responsible models of reuse of mobility data through data collaboration
                 as to support decision-making regarding pandemic prevention, monitoring, and response</p>
 
